# weather-notifier

./: LICENSE  README.md  pyproject.toml
data/: users.csv
weather_notifier/: __init__.py
