[tool.poetry]
name = "weather-notifier"
version = "0.1.0"
description = "Fetches the weather forecast for a specified location and sends a daily summary via email."
authors = ["abdullah-aa <abdullaha90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
